# ttml-processor-rs

./: Cargo.toml  LICENSE  README.md
benches/: ttml_parser_benchmark.rs
examples/: error.rs  generate.rs  parse.rs  write_json.rs
src/: constants.rs  error.rs  lib.rs  model.rs  utils.rs
src/amll/: mod.rs  model.rs  to_amll.rs  to_ttml.rs
src/generator/: body.rs  ext.rs  head.rs  mod.rs  span.rs  sub_lyric.rs  utils.rs
src/parser/: body.rs  ext.rs  head.rs  mod.rs  span.rs  state.rs  sub_lyric.rs  timestamp.rs  utils.rs
tests/: error_test.rs  generator_snapshot_tests.rs  parser_snapshot_tests.rs
tests/fixtures/: complex-test-song.ttml
tests/snapshots/: generator_snapshot_tests__generate_ttml@1752892462960-151196223-4b4faff5.ttml.snap  generator_snapshot_tests__generate_ttml@1775924694714-68000793-7ggA3MIA.ttml.snap  generator_snapshot_tests__generate_ttml@apple-music-duet.ttml.snap  generator_snapshot_tests__generate_ttml@complex-test-song.ttml.snap  generator_snapshot_tests__generate_ttml@緋色月下、狂咲ノ絶.722013.ttml.snap  generator_snapshot_tests__generate_ttml_formatted@1752892462960-151196223-4b4faff5.ttml.snap  generator_snapshot_tests__generate_ttml_formatted@1775924694714-68000793-7ggA3MIA.ttml.snap  generator_snapshot_tests__generate_ttml_formatted@apple-music-duet.ttml.snap  generator_snapshot_tests__generate_ttml_formatted@complex-test-song.ttml.snap  generator_snapshot_tests__generate_ttml_formatted@緋色月下、狂咲ノ絶.722013.ttml.snap  generator_snapshot_tests__roundtrip@1752892462960-151196223-4b4faff5.ttml.snap  generator_snapshot_tests__roundtrip@1775924694714-68000793-7ggA3MIA.ttml.snap  generator_snapshot_tests__roundtrip@complex-test-song.ttml.snap  generator_snapshot_tests__roundtrip@緋色月下、狂咲ノ絶.722013.ttml.snap  generator_snapshot_tests__roundtrip_formatted@1775924694714-68000793-7ggA3MIA.ttml.snap  generator_snapshot_tests__roundtrip_formatted@apple-music-duet.ttml.snap  generator_snapshot_tests__roundtrip_formatted@緋色月下、狂咲ノ絶.722013.ttml.snap  parser_snapshot_tests__lyric_parsing@1752892462960-151196223-4b4faff5.ttml.snap  parser_snapshot_tests__lyric_parsing@1775924694714-68000793-7ggA3MIA.ttml.snap  (+3 more)
